Fixed scrolling issues with large modal windows on mobile devices and layout issues with upload form

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -5,6 +5,9 @@ body {
     background-color: #222222;
 }
 
+body.modal-open {
+    overflow: hidden;
+}
 
 /* Hiding some stuff */
 
@@ -294,6 +297,12 @@ hamburger menu appears.
     font-size: 5em;
     color: rgb(255, 255, 255);
     text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+}
+
+/* mediaitem modal */
+.mediaitemModal {
+    max-height: 100%;
+    overflow: scroll;
 }
 
 /* viewport queries */
